; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/rocker/extr_rocker_main.c_rocker_world_port_open.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/rocker/extr_rocker_main.c_rocker_world_port_open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rocker_port = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.rocker_world_ops* }
%struct.rocker_world_ops = type { i32 (%struct.rocker_port.0*)* }
%struct.rocker_port.0 = type opaque

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.rocker_port*)* @rocker_world_port_open to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rocker_world_port_open(%struct.rocker_port* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.rocker_port*, align 8
  %4 = alloca %struct.rocker_world_ops*, align 8
  store %struct.rocker_port* %0, %struct.rocker_port** %3, align 8
  %5 = load %struct.rocker_port*, %struct.rocker_port** %3, align 8
  %6 = getelementptr inbounds %struct.rocker_port, %struct.rocker_port* %5, i32 0, i32 0
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load %struct.rocker_world_ops*, %struct.rocker_world_ops** %8, align 8
  store %struct.rocker_world_ops* %9, %struct.rocker_world_ops** %4, align 8
  %10 = load %struct.rocker_world_ops*, %struct.rocker_world_ops** %4, align 8
  %11 = getelementptr inbounds %struct.rocker_world_ops, %struct.rocker_world_ops* %10, i32 0, i32 0
  %12 = load i32 (%struct.rocker_port.0*)*, i32 (%struct.rocker_port.0*)** %11, align 8
  %13 = icmp ne i32 (%struct.rocker_port.0*)* %12, null
  br i1 %13, label %15, label %14

14:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %22

15:                                               ; preds = %1
  %16 = load %struct.rocker_world_ops*, %struct.rocker_world_ops** %4, align 8
  %17 = getelementptr inbounds %struct.rocker_world_ops, %struct.rocker_world_ops* %16, i32 0, i32 0
  %18 = load i32 (%struct.rocker_port.0*)*, i32 (%struct.rocker_port.0*)** %17, align 8
  %19 = load %struct.rocker_port*, %struct.rocker_port** %3, align 8
  %20 = bitcast %struct.rocker_port* %19 to %struct.rocker_port.0*
  %21 = call i32 %18(%struct.rocker_port.0* %20)
  store i32 %21, i32* %2, align 4
  br label %22

22:                                               ; preds = %15, %14
  %23 = load i32, i32* %2, align 4
  ret i32 %23
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
